tests/errors/lex_err04.kt
// exponent literal error
1.23e+10